[package]
name = "pam"
version = "0.1.0"
edition = "2021"
authors = ["Andras Pinter <andras.pinter@oneidentity.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "pam"
crate_type = ["dylib"]

[dependencies.libc]
version = "0.2.107"

[dependencies.serde]
version = "1.0.130"

[dependencies.serde_derive]
version = "1.0.130"

[dependencies.serde_json]
version = "1.0.70"

[dependencies.ureq]
version = "2.3.0"
features = ["json"]
